<resources>
    <string name="app_name">숫자주소\n홈넘버</string>
    <string name="str_id">아이디</string>
    <string name="str_pw_change">비밀번호 수정</string>
    <string name="str_delivery">택배사 설정</string>
    <string name="str_my_info">내 정보</string>
    <string name="str_recommend">홈넘버 가입추천</string>
    <string name="str_hn">홈넘버 조회</string>
    <string name="str_confirm">확인</string>
    <string name="str_modify">수정</string>
    <string name="str_infoModify">정보수정</string>
    <string name="str_cancle">취소</string>
    <string name="str_notice">알림</string>
    <string name="str_order_title">택배예약 알림</string>
    <string name="str_name">이름</string>
    <string name="str_name_star">이름*</string>
    <string name="str_back">뒤로가기</string>
    <string name="str_close">닫기</string>
    <string name="str_search">찾기</string>
    <string name="str_search_2">검색</string>
    <string name="str_choice">선택</string>
    <string name="str_save">저장 하기</string>
    <string name="str_change">변경</string>
    <string name="str_edit">편집</string>
    <string name="str_delete">삭제</string>
    <string name="str_duplicate">중복</string>
    <string name="str_save_close">저장 후 닫기</string>
    <string name="str_keypad">키패드</string>
    <string name="str_customer_join">고객가입</string>
    <string name="str_homenumber_join">홈넘버 가입</string>
    <string name="str_homenumber">홈넘버</string>
    <string name="str_item_info">물품정보</string>
    <string name="str_print_log">히스토리</string>
    <string name="str_setting">더보기</string>
    <string name="str_customer_name">고객명</string>
    <string name="str_phonenumber">휴대폰번호</string>
    <string name="str_phonenumber2">휴대폰번호</string>
    <string name="str_phonenumber3">휴대폰번호*</string>
    <string name="str_address">주소</string>
    <string name="str_address2">주소*</string>
    <string name="str_company">회사명</string>
    <string name="str_memo">메모</string>
    <string name="str_sms_confirm">동의\n인증</string>
    <string name="str_print">GS 택배 예약</string>
    <string name="str_item_info_save">물품정보 저장</string>
    <string name="str_zip_code">우편번호</string>
    <string name="str_accept_number_check">인증번호 확인</string>
    <string name="str_accept_number_3min">인증번호 입력 (3분 이내)</string>
    <string name="str_accept_number_push">인증번호 다시받기</string>
    <string name="str_search_devide">검색기준</string>
    <string name="str_search_doro">도로명</string>
    <string name="str_search_jibun">지번명</string>
    <string name="str_search_sido">시/도*</string>
    <string name="str_search_sigungu">시군구</string>
    <string name="str_search_jibun_star">지번명*</string>
    <string name="str_search_doro_star">도로명*</string>
    <string name="str_search_gunmul">건물명</string>
    <string name="str_search_ex_sigungu">예) 강남구</string>
    <string name="str_search_ex_doro">예) 테헤란로38길 6</string>
    <string name="str_search_ex_jibun">예) 역삼동 719</string>
    <string name="str_search_ex_gunmul">예) Memo빌딩</string>
    <string name="str_password">비밀번호</string>
    <string name="str_password_check">비밀번호 확인</string>
    <string name="str_phone_number">휴대폰 번호</string>
    <string name="str_address_sub">상세주소</string>
    <string name="str_support_center">고객센터</string>
    <string name="str_support_center_number">02–557–8930</string>
    <string name="str_setting_keypad">키패드 설정</string>
    <string name="str_sound">소리</string>
    <string name="str_vibrator">진동</string>
    <string name="str_no_effect">무음</string>
    <string name="str_address_delete">연락처 삭제</string>
    <string name="str_logen">로젠택배</string>
    <string name="str_cj">CJ대한통운</string>
    <string name="str_memberjoin">회원가입</string>
    <string name="str_login">로그인</string>
    <string name="str_current_pw">현재 비밀번호</string>
    <string name="str_changing_pw">변경할 비밀번호</string>
    <string name="str_changing_pw_check">변경할 비밀번호 확인</string>
    <string name="str_change_pw">비밀번호 변경</string>
    <string name="str_item_message">배송메세지</string>
    <string name="str_item_info_setting">상품 정보 설정</string>
    <string name="str_item_message_setting">배송메세지 설정</string>
    <string name="str_logen_en">Logen</string>
    <string name="str_cj_en">CJLogistics</string>
    <string name="str_item_name">품목선택</string>
    <string name="str_item_name2">물품명</string>
    <string name="str_item_name_plus">상품상세명</string>
    <string name="str_item_price2">물품 가액</string>
    <string name="str_item_price">상품가격 (원)</string>
    <string name="str_item_number">상품개수</string>
    <string name="str_item_kg">상품무게 (Kg)</string>
    <string name="str_delivery_user">택배사 계정</string>
    <string name="str_delivery_kind">운송장 종류</string>
    <string name="str_delivery_way">운임 지불 방식</string>
    <string name="str_delivery_way_1">선불</string>
    <string name="str_delivery_way_2">착불</string>
    <string name="str_delivery_way_3">신용</string>
    <string name="str_delivery_way_4">본사</string>
    <string name="str_price_won">원</string>
    <string name="str_ok">확인</string>
    <string name="str_logen_b1">LG-ThermalB1</string>
    <string name="str_logen_a1">LG-ThermalA1</string>
    <string name="str_logen_prepaid">LGPrepaid</string>
    <string name="str_logen_deferred">LGDeferred</string>
    <string name="str_logen_credit">LGCredit</string>
    <string name="str_logen_headquarters">LGHeadquarters</string>
    <string name="str_cj_2p">CJ-2P</string>
    <string name="str_cj_prepaid">CJPrepaid</string>
    <string name="str_cj_deferred">CJDeferred</string>
    <string name="str_cj_credit">CJCredit</string>
    <string name="str_box_size_way">박스 유형</string>
    <string name="str_box_size_1">극소</string>
    <string name="str_box_size_1_en">CJBox01</string>
    <string name="str_box_size_2">소</string>
    <string name="str_box_size_2_en">CJBox02</string>
    <string name="str_box_size_3">중</string>
    <string name="str_box_size_3_en">CJBox03</string>
    <string name="str_box_size_4">대</string>
    <string name="str_box_size_4_en">CJBox04</string>
    <string name="str_box_size_5">특대</string>
    <string name="str_box_size_5_en">CJBox05</string>
    <string name="str_delivery_a1">감열A1</string>
    <string name="str_delivery_b1">감열B1</string>
    <string name="str_user_info">사용자 정보</string>
    <string name="str_add_setting">추가 설정</string>
    <string name="str_item_how_1">선불</string>
    <string name="str_item_how_2">착불</string>
    <string name="str_item_how_3">신용</string>
    <string name="str_item_name_1">의류</string>
    <string name="str_item_name_2">서신/서류</string>
    <string name="str_item_name_3">가전제품류</string>
    <string name="str_item_name_4">과일류</string>
    <string name="str_item_name_5">곡물류</string>
    <string name="str_item_name_6">한약류</string>
    <string name="str_item_name_7">식품류</string>
    <string name="str_item_name_8">잡화/서적</string>
    <string name="str_item_name_11">옷</string>
    <string name="str_item_name_22">서류</string>
    <string name="str_item_name_33">가전제품</string>
    <string name="str_item_name_44">과일</string>
    <string name="str_item_name_55">곡물</string>
    <string name="str_item_name_66">한약</string>
    <string name="str_item_name_77">식품</string>
    <string name="str_item_name_88">책</string>
    <string name="str_number_0">0</string>
    <string name="str_number_1">1</string>
    <string name="str_number_2">2</string>
    <string name="str_number_3">3</string>
    <string name="str_number_4">4</string>
    <string name="str_number_5">5</string>
    <string name="str_number_6">6</string>
    <string name="str_number_7">7</string>
    <string name="str_number_8">8</string>
    <string name="str_number_9">9</string>
    <string name="str_number_D">D</string>
    <string name="str_number_101">101</string>
    <string name="str_number_division">-</string>
    <string name="msg_back_button">\"뒤로\" 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="msg_not_auth_internet">인터넷이 연결되어 있지 않습니다.</string>
    <string name="msg_choice_keypad">키패드 옵션을 선택해주세요.</string>
    <string name="msg_phonenumber_check">가입된 홈넘버의 휴대폰번호를 입력해주세요.</string>
    <string name="msg_choice_delivery">택배사를 선택해주세요.</string>
    <string name="msg_not_auth_google_play_service">구글플레이 서비스 등록여부를 확인해주세요.</string>
    <string name="msg_not_auth_rooting">디바이스의 루팅여부를 감지하였습니다.\n루팅된 디바이스는 사용하실 수 없습니다.</string>
    <string name="msg_not_auth_uuid">디바이스 UUID 여부를 판단할 수 없습니다.</string>
    <string name="msg_permission_negative">권한이 거부되었습니다.\n사용을 원하시면 설정에서 해당 권한을 직접 허용하셔야 합니다.</string>
    <string name="msg_do_not_delete">더이상 지울 수 없습니다.</string>
    <string name="msg_do_not_insert">더이상 입력할 수 없습니다.</string>
    <string name="msg_not_connect_ble">블루투스가 켜져있지 않습니다.</string>
    <string name="msg_not_pairing">선택된 블루투스 프린터가 없습니다.\n블루투스 프린터를 설정해주세요.</string>
    <string name="msg_input_id">휴대폰번호를 입력해주세요.</string>
    <string name="msg_input_pw">비밀번호를 입력해주세요.</string>
    <string name="msg_check_pw">비밀번호를 확인해주세요.</string>
    <string name="msg_logout_quest">로그아웃하시겠습니까?</string>
    <string name="msg_logout">로그아웃되었습니다.</string>
    <string name="msg_pls_correct_info">올바른 정보를 입력해 주세요.</string>
    <string name="msg_ble_device_choice">인쇄하실 블루투스 장치를 선택하세요.</string>
    <string name="msg_push_homenumber">올바른 홈넘버를 입력하세요.</string>
    <string name="msg_check_ble_printer">프린터 장치와의 연결상태를 확인해주세요.</string>
    <string name="msg_print_succes">운송장 전송이 완료되었습니다.</string>
    <string name="msg_customer_join_accept">(필수)개인정보수집 및 이용 동의</string>
    <string name="msg_customer_join_help">홈넘버(주) 가입 후 발급된 홈넘버는\n3영업일 이내에 인증 받으신 휴대폰 번호로\nSMS가 전송됩니다.</string>
    <string name="msg_request_phonenumber">휴대폰 번호를 작성해주세요.</string>
    <string name="msg_none_phonenumber">휴대폰 번호를 알 수 없습니다.</string>
    <string name="msg_valid_phonenumber">올바른 휴대폰 번호를 작성해주세요.</string>
    <string name="msg_check_phonenumber">휴대폰 번호를 확인해주세요.</string>
    <string name="msg_check_phone_success">휴대폰 인증을 확인해주세요.</string>
    <string name="msg_check_custom_addr">고객의 주소를 확인해주세요.</string>
    <string name="msg_success_phonenumber">휴대폰 인증이 완료되었습니다.</string>
    <string name="msg_init_phonenumber">휴대폰 인증이 초기화되었습니다.</string>
    <string name="msg_request_phonenumber_accept">휴대폰 번호 인증을 확인해주세요.</string>
    <string name="msg_request_phonenumber_accept_number">인증번호를 확인해주세요.</string>
    <string name="msg_request_phonenumber_accept_number_6">인증번호가 6자리인지 확인해주세요.</string>
    <string name="msg_request_address_accept">고객의 우편번호 정보를 확인해주세요.</string>
    <string name="msg_request_accept">소화물 일관수송 약관에 동의해주세요.</string>
    <string name="msg_request_customername">고객명을 작성해주세요.</string>
    <string name="msg_check_customername">고객명을 확인해주세요.</string>
    <string name="msg_valid_id">아이디의 첫글자는 숫자가 아니며 영문과 숫자를 포함하여 4자리 이상 20자리 이하입니다.</string>
    <string name="msg_valid_password">비밀번호는 영문과 숫자를 포함하며 5자리 이상 16자리 이하입니다.</string>
    <string name="msg_valid_password2">비밀번호는 영문과 숫자를 포함하여 8자리 이상 20자리 이하입니다.</string>
    <string name="msg_input_password">비밀번호를 입력해주세요.</string>
    <string name="msg_check_password">비밀번호 확인을 입력해주세요.</string>
    <string name="msg_false_password">비밀번호가 서로 다릅니다. 확인해주세요.</string>
    <string name="msg_checkbox_please">검색기준을 선택하세요.</string>
    <string name="msg_doro_please">도로명을 작성하세요.</string>
    <string name="msg_jibun_please">지번명을 작성하세요.</string>
    <string name="msg_sido_please">시/도를 선택하세요.</string>
    <string name="msg_success_join">회원가입이 완료되었습니다.</string>
    <string name="msg_success_join2">이미 사용중인 ID 입니다.</string>
    <string name="msg_doro_text_size_2_please">도로명을 2글자 이상 작성해주세요.</string>
    <string name="msg_jibun_text_size_2_please">지번명을 2글자 이상 작성해주세요.</string>
    <string name="msg_bottom_sheet_hint_memo">메모를 입력하세요.</string>
    <string name="msg_item_message">배송메세지를 입력해주세요.</string>
    <string name="msg_item_name">물품을 선택해주세요.</string>
    <string name="msg_item_name_plus2">물품명을 입력해주세요.</string>
    <string name="msg_item_price">상품 가격을 입력해주세요.</string>
    <string name="msg_item_number">상품 개수를 입력해주세요.</string>
    <string name="msg_item_kg">상품 무게 입력해주세요.</string>
    <string name="msg_over_plus_price">※ 50만원 초과시 고액할증료 2,000원 추가운임 발생.</string>
</resources>